      for potential further sub-loads only for options where
      such behavior is relevant, keeping
      various unserializable options like those generated
      by contains_eager() out of individual instance states.
      [ticket:1553]

- sql
    - Fixed the "numeric" paramstyle, which apparently is the
      default paramstyle used by Informixdb.
      
- postgresql
    - Added support for reflecting the DOUBLE PRECISION type,
      via a new postgres.PGDoublePrecision object.  
      This is postgresql.DOUBLE_PRECISION in 0.6.
      [ticket:1085]

- mssql
    - Changed the name of TrustedConnection to 
      Trusted_Connection when constructing pyodbc connect
      arguments [ticket:1561]

- ext 
    - A column can be added to a joined-table declarative 
      superclass after the class has been constructed 
      (i.e. via class-level attribute assignment), and
      the column will be propagated down to 
      subclasses. [ticket:1570]  This is the reverse
      situation as that of [ticket:1523], fixed in 0.5.6.
      
0.5.6
=====
- orm
    - Fixed bug whereby inheritance discriminator part of a
      composite primary key would fail on updates.
      Continuation of [ticket:1300].

    - Fixed bug which disallowed one side of a many-to-many 
      bidirectional reference to declare itself as "viewonly"
      [ticket:1507]
    
    - Added an assertion that prevents a @validates function
      or other AttributeExtension from loading an unloaded
      collection such that internal state may be corrupted.
      [ticket:1526]
      
    - Fixed bug which prevented two entities from mutually
      replacing each other's primary key values within a single
      flush() for some orderings of operations.  [ticket:1519]
      
    - Fixed an obscure issue whereby a joined-table subclass
      with a self-referential eager load on the base class
      would populate the related object's "subclass" table with
      data from the "subclass" table of the parent.